--- a/IPA/NW/ネットワークスタック.md
+++ b/IPA/NW/ネットワークスタック.md
@@ -46,7 +46,7 @@
   - LLC (Logical Link Control、論理リンク制御)
     - 多重化・非多重化、フロー制御、欠落検知、再送制御
     - 下層での物理媒体による差異を吸収し、上位層から統一的に扱えるようにする
-      - 有線LANについては現在はイーサネットに統一されたため必要なくなった
+      - 有線LANについては現在はイーサネット以外が使われなくなったため必要なくなった
   - MAC (Medium Access Control、媒体アクセス制御)
     - 同じ物理媒体を共有する通信を制御する仕組み
     - CSMA/CD (Carrier Sense Multiple Access with Collision Detection、搬送波感知多重アクセス/衝突検出)
@@ -94,5 +94,82 @@
 - 拡張イーサネット
 - オーバーレイネットワーク
 
-## 無線LAN
+### 無線LAN
+- IEEE 802.11
+  - a/b/g/j/n/ac/ad/ax/...
+  - 物理層とMAC層の2つの規格で構成される
+  - CSMA/CA
+    - ACK方式 (Acknowledgement, 確認応答)
+      - データを直接送信し、受信側がACK応答を返す方式
+      - 隠れ端末問題に対応できない
+    - RTS/CTS方式 (Request To Send / Clear To Send)
+      - データ本体の送信前に送信権獲得の要求(RTS)を送信し、獲得できたらデータ本体を送信する方式
+      - 受信側は送信権を与えた先を保存している
+      - 隠れ端末に対応できる
+    - いずれの方式も送信前に誰も送信中でないことは確認する
+    - さらし端末問題
+      - BSSカラー
+        - どこに対して送信しているかをフレームに埋め込む
+        - 衝突回避をしなくてよいときはしないようにできる
+- Wi-Fi
+  - Wi-Fi Allianceの規格
+  - IEEE規格に対応している
+    - Wi-Fi 4 → 802.11n
+    - Wi-Fi 5 → 802.11ac
+    - …
+  - 
+- 無線PAN
+  - IEEE 802.15
+  - Bluetooth (IEEE 802.15.1)
+- 高速化技術
+  - MIMO (Multiple Input Multiple Output)
+    - 送信側・受信側ともに複数のアンテナを持つ場合に、データを複数のストリームに分割し並列で送受信する
+    - MU-MIMO (Multi User MIMO)
+  - OFDM (Orthogonal Frequency Division Multiplexing、直交周波数分割多重方式)
+    - ?
+    - OFDMA (Orthogonal Frequency Division Multiple Access)
+  - チャネルボンディング
+    - 複数のチャネルを1つの高速なチャネルのように扱う技術
+  - マルチバンド (デュアルバンド、トライバンド)
+    - 複数の周波数帯で同時に通信する
+- 周波数帯
+  - 2.4 GHz帯 (2.4-2.5 GHz)
+    - 減衰しにくく障害物に強い
+    - ISMバンド (産業科医療学用バンド)のうちの1つであるため、電子レンジ等と干渉する
+  - 5 GHz帯 (5.150-5.350 GHz, 5.470-5.725 GHz)
+    - 伝送速度が早い
+    - 減衰しやすく障害物に弱い
+    - レーダーと同じ周波数帯のため干渉する
+    - W53,W56(後述)は気象レーダー等と干渉するため、DFS (Dynamic Frequency Selection, 動的電波周波数選択)により干渉の回避が義務付けられている
+  - 6 GHz帯
+    - Wi-Fi 6E以降のみ
+- チャネル
+  - 各周波数帯には複数のチャネルが定められている。チャネルは中心周波数とチャネル幅からなる
+  - 同じ周波数帯でも規格によりチャネルの設定の仕方は異なる
+  - 隣り合うチャネルとの中心周波数の間隔がチャネル幅を下回っている場合がある。その場合、干渉せずに使用できるチャネルは実質的にはもっと少なくなる
+    - 2.4 GHz帯
+      - 2.412, 2.437, 2.462 の3つ
+    - 5 GHz帯
+      - 5.180, 5.200, 5.220, 5.240 (W52、4チャンネル)
+      - 5.260, 5.280, 5.300, 5.320 (W53、4チャンネル)
+      - 5.500 ～ 5.720 (W56、12チャンネル)
+    - 6 GHz帯
+      - 24チャンネル
+- アクセスポイント (AP)
+  - 無線LANにおけるブリッジ(L2、MACアドレスレベル)
+  - インフラストラクチャモード
+    - アクセスポイントを使う
+  - アドホックモード
+    - アクセスポイントを使わず端末間で直接通信する
+  - 1台のAPがカバーする無線LANセグメントを BSS (Basic Service Set)という
+    - BSSは BSS ID で識別し、APのMACアドレスが使われる
+  - 複数のAPを接続して構成した無線LANセグメントを ESS (Extended Service Set)という
+    - ESSは ESS ID (SSID, 32文字以下の英数字)で識別する
+  - APはSSIDをビーコン信号で発している (パッシブスキャン)
+  - ANY接続
+    - 通信状態が一番いいAPに接続する
+- フレームアグリゲーション
+  - 同じ宛先のフレームをまとめる
+- ローミング
+  - 移動する端末が通信が途絶えないよう、同じESSの最寄りのAPに自動接続する機能
 
