--- a/IPA/NW/ネットワークスタック.md
+++ b/IPA/NW/ネットワークスタック.md
@@ -117,21 +117,6 @@
     - Wi-Fi 4 → 802.11n
     - Wi-Fi 5 → 802.11ac
     - …
-  - 
-- 無線PAN
-  - IEEE 802.15
-  - Bluetooth (IEEE 802.15.1)
-- 高速化技術
-  - MIMO (Multiple Input Multiple Output)
-    - 送信側・受信側ともに複数のアンテナを持つ場合に、データを複数のストリームに分割し並列で送受信する
-    - MU-MIMO (Multi User MIMO)
-  - OFDM (Orthogonal Frequency Division Multiplexing、直交周波数分割多重方式)
-    - ?
-    - OFDMA (Orthogonal Frequency Division Multiple Access)
-  - チャネルボンディング
-    - 複数のチャネルを1つの高速なチャネルのように扱う技術
-  - マルチバンド (デュアルバンド、トライバンド)
-    - 複数の周波数帯で同時に通信する
 - 周波数帯
   - 2.4 GHz帯 (2.4-2.5 GHz)
     - 減衰しにくく障害物に強い
@@ -155,6 +140,17 @@
       - 5.500 ～ 5.720 (W56、12チャンネル)
     - 6 GHz帯
       - 24チャンネル
+- 高速化技術
+  - MIMO (Multiple Input Multiple Output)
+    - 送信側・受信側ともに複数のアンテナを持つ場合に、データを複数のストリームに分割し並列で送受信する
+    - MU-MIMO (Multi User MIMO)
+  - OFDM (Orthogonal Frequency Division Multiplexing、直交周波数分割多重方式)
+    - ?
+    - OFDMA (Orthogonal Frequency Division Multiple Access)
+  - チャネルボンディング
+    - 複数のチャネルを1つの高速なチャネルのように扱う技術
+  - マルチバンド (デュアルバンド、トライバンド)
+    - 複数の周波数帯で同時に通信する
 - アクセスポイント (AP)
   - 無線LANにおけるブリッジ(L2、MACアドレスレベル)
   - インフラストラクチャモード
@@ -172,4 +168,11 @@
   - 同じ宛先のフレームをまとめる
 - ローミング
   - 移動する端末が通信が途絶えないよう、同じESSの最寄りのAPに自動接続する機能
+- 無線PAN
+  - IEEE 802.15
+  - Bluetooth (IEEE 802.15.1)
+
+## スイッチ
+- L2
+  - MACアドレスを見て通信する
 
