イーサネット

--- a/IPA/NW/イーサネット.md
+++ b/IPA/NW/イーサネット.md
@@ -80,7 +80,7 @@
     - 実際の伝送は各バイトごとに1番下のビットから1番上のビットへの順で行われる。
   - FF-FF-FF-FF-FF-FF はブロードキャストアドレスである。
 - VLANタグ
-  - 仮想LAN(VLAN)において、どのVLANに所属するかを識別するタグ。
+  - 仮想LAN(VLAN)において、どのVLANに所属するかを識別するタグ。(後述)
 - タイプ/長さ
   - 0x0600(1536)以上の場合はデータの種別を表す。これを EtherType という。
     - 0x0800 : IPv4
@@ -175,4 +175,41 @@
 ## スイッチ
 - L2
   - MACアドレスを見て通信する
+- MACアドレス学習機能
+  - 受信ポートとMACアドレスの対応付けを学習する (MACアドレステーブル)
+  - 一定期間通信がないと破棄する (エージングタイム)
+- フラッディング
+  - 受信したフレームをすべてのポートから送出する
+  - フラッディングするフレーム (BUMフレーム)
+    - ブロードキャストフレーム (Broadcast)
+    - マルチキャストフレーム (Multicast)
+    - まだ宛先を学習していないユニキャストフレーム (Unkonwn Unicast)
+- ブロードキャストストーム
+- VLAN
+  - ポートベースVLAN、タグVLANの2方式
+  - VLANタグ
+    - 4バイト
+    - 前半2バイトはタグプロトコル識別子(Tag Protocol ID, TPID)、
+    - 後半2バイトはタグ制御識別子(Tag Control ID, TCI)
+      - 優先度(3bit)
+        - CoS (Class of Service)
+      - DEI (Drop Eligible Indicator, 1bit)
+        - 1なら、輻輳時に破棄してもよいフレーム
+      - VLAN ID (12bit)
+- PAUSEフレーム
+  - スイッチが輻輳を検知したとき、送信側に対して送信停止を指示するために送るフレーム
+- ミラーリング
+  - フレームを複製して他のポートからも送出すること
+  - この場合受信側は自分が宛先でないフレームも破棄せず受信する必要がある (プロミスキャスモード)
+- フラッピング（スラッシング）
+  - ブロードキャストストームなどのループ時に、MACアドレステーブルが短時間に頻繁に更新されること
+  - ループの検出に使う
+- SNMPエージェント (インテリジェントスイッチ)
+  - IPアドレスを持つ
+- PoE (Power over Ethernet)
+  - LANケーブルを介して電力を供給する
+- ブリッジ
+  - 登場したのはブリッジのほうが先。
+  - スイッチは他にも「L2スイッチ」「スイッチングハブ」とも呼ばれる
 
+# WAN
