--- a/IPA/NW/イーサネット.md
+++ b/IPA/NW/イーサネット.md
@@ -213,3 +213,18 @@
   - スイッチは他にも「L2スイッチ」「スイッチングハブ」とも呼ばれる
 
 # WAN
+- FTTx
+  - 光ファイバーを使ったインターネットアクセス回線構成。FTTH (Fiber to the home), FTTC (Fiber to the curb), FTTB (Fiber to the building)などの総称
+  - 現在の主流は GE-PON (Gigabit Ethernet - Passive Optical Network)と呼ばれる構成 (IEEE 802.3ah)。
+    - 家庭内などのLANと外の光ファイバーとの間にはONU (Optical Network Unit)があり、電気信号と光信号の変換を行う。
+    - ONUから出た光回線は電柱などに設置されたクロージャの中の光スプリッタに入り、収容局に送られる。
+    - 収容局でOLT (Optical Line Terminal, 光回線終端装置)により再度電気信号に変換され、ルータを介してインターネットに接続する。
+
+# VPN
+- IP-VPN
+  - 通信事業者のIP閉域網の上にVPNを構築する技術およびサービス
+  - L2とL3の間でパケットにMPLSというプロトコルにもとづきラベル(識別子)を付与する。VPNを出るときにラベルは除去される
+- 広域イーサネット
+  - 通信事業者のイーサネット閉域網の上にVPNを構築するサービス
+  - L3プロトコルがIPに限定されない
+  - 拡張VLANタグを利用する
